# blog

./: .gitignore  CNAME  Cargo.toml  feed.xml  index.html  releases.json
.github/: main.yml
.github/workflows/: main.yml
2015/04/23/: multiprocessing-logging-in-python.html
2015/04/26/: python-decorators-code-reuse.html
2017/02/06/: python-context-managers.html
2017/08/06/: why-functional-programming.html
2017/08/29/: writing-cli-app-rust.html
2017/10/01/: testing-rust-cli-apps.html
2017/11/03/: simple-events-hook-rust.html
2018/01/16/: rust-reading-list.html
2018/08/04/: why-rust-return-values-errors.html
2019/01/16/: rust-compiler-lints.html
2020/04/16/: actix-web-error-handling.html
posts/: 2020-04-28-rust-reading-list.md  2020-05-11-2020-books-challenge.md  2020-06-06-the-golden-list.md  2020-11-12-twenty-one-day-challenge.md  2021-01-08-2021-books-reading.md  2021-01-08-books-reading.md  2021-01-08-notes-naval-almanack.md  2021-01-13-notes-gmmv1.md  2021-02-13-notes-seven-brief-lessons.md  2021-05-23-notes-range.md  2021-12-05-next-year-challenge.md  2022-01-09-hiking-kilimambogo.md  2022-01-31-hiking-elephant-hill.md  2022-03-08-hiking-mt-ololokwe.md  2022-03-24-mt-kenya-hike.md  2023-07-01-notes-dead-aid.md  2023-10-25-tenx-reading-journal.md  2023-12-11-ghaladb.md  2023-12-19-notes-thinking-fast-slow.md  2024-01-17-tenx-reading-journal.md  2024-03-13-running-the-paris-semi.md  2025-05-11-swift-ios-bugs-log.md  blog.yml
serve/: Cargo.toml
src/: blogs.rs  lib.rs  posts.rs
src/styles/: app.scss
styles/: app.css
templates/: footer.hbs
(+13 files in other folders)
