[package]
name = "blog"
version = "0.1.0"
authors = ["Matt Gathu <mattgathu@gmail.com>"]
edition = "2018"

[[bin]]
name = "blog"
path = "src/blog.rs"

[dependencies]
handlebars = { version = "3", features = ["dir_source"] }
lazy_static = "1.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
comrak = "0.9"
fs_extra = "1.1.0"
regex = "1.3"
chrono = "0.4"
color-eyre = "0.6.2"
eyre = "0.6.8"
grass = "0.13.1"

[workspace]
members = ["serve"]
