[package]
name = "blog"
version = "0.1.0"
authors = ["Matt Gathu <mattgathu@gmail.com>"]
edition = "2018"

[[bin]]
name = "blog"
path = "src/blog.rs"

[dependencies]
handlebars = { version = "3", features = ["dir_source"] }
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_yaml = "0.8"
serde_json = "1"
comrak = "0.17"
fs_extra = "1"
regex = "1.3"
chrono = "0.4"
color-eyre = "0.6"
eyre = "0.6"
grass = "0.13"

[workspace]
members = ["serve"]
